@@ -11,6 +11,7 @@
 - Keep order for records in plural subforms, so new records are saved in same order as form order
 - Support add_subgroup in horizontal subforms
 - Improve support in helpers for using :select form_ui with polimorphy associations (needs to use a select to choose the class)
+- Allow to create in nested has_many :through associations, when source association is a belongs_to
 
 = 3.2.17 (not released yet)
 - fix constraints for columns with multiple columns in search_sql
